# percept

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  IDEA.md  LICENSE  README.md  cpo.md  dev.md  glama.json  growth.md  package.json  pm.md  qa.md
.context/: codex-session-id
.github/workflows/: deploy-landing.yml
api/: README.md  deploy.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
api/src/: index.ts  types.ts
docs/: accounts.md  bizplan.md  brand-guide.md  staging-test.md
docs/agents/: cpo.md  (+6 more)
eye-action/: .gitignore  README.md  action.yml  package-lock.json  package.json
gitbook/: README.md  SUMMARY.md  faq.md  github-action.md  install.md  pricing.md  usage.md
landing/: 404.html  _redirects  bug-demo.html  check.html  index.html  llms-full.txt  llms.txt  privacy.html  robots.txt  sitemap.xml  terms.html  wrangler.toml
logo/: pixel-logo.html
marketing_sns/: directories.md  discord_api.env  linkedin_api.env  producthunt_api.env  reddit_api.env  x_api.env
mcp/: package-lock.json  package.json  tsconfig.docker.json  tsconfig.json  wrangler.toml
memory/: MEMORY.md  backlog.md  daily_20260320.md
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: langchain_example.py
python-sdk/percept/: __init__.py  client.py  decorators.py  models.py
scripts/: create_internal_key.py  deploy_mcp.py  generate_og_image.py  moltbook_monitor.pid  moltbook_monitor.py  moltbook_state.json  rotate_percept_key.py  set_worker_secret.py  store_key_direct.py  update_mcp_url.py
sdk/: package-lock.json  package.json
(+56 files in other folders)
